# hyprKCS

./: .SRCINFO  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  flake.nix  hyprkcs.desktop  result
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cargo-build.yml  ci.yml  nix-ci.yml  tag-on-version-bump.yml
src/: cli.rs  config.rs  doctor.rs  keybind_object.rs  lib.rs  main.rs  parser.rs  watcher.rs  xkb_handler.rs
src/config/: constants.rs  favorites.rs  hud.rs  mod.rs
src/parser/: input.rs  mod.rs  tests.rs
src/ui/: dialogs.rs  hud.rs  mod.rs  settings.rs  style.rs  utils.rs  views.rs  window.rs  wizards.rs
src/ui/settings/: about.rs  appearance.rs  feedback.rs  general.rs  gestures.rs  hud.rs  input.rs  mod.rs  submaps.rs  ui_elements.rs  variables.rs  window.rs
src/ui/utils/: apps.rs  apps_test.rs  backup.rs  clone.rs  components.rs  conflicts.rs  execution.rs  export.rs  keybinds.rs  macro_builder.rs  mod.rs  search.rs  widgets.rs  xkb.rs
src/ui/views/: add.rs  edit.rs  keyboard.rs  keyboard_layouts.rs  mod.rs  restore.rs
src/ui/wizards/: bulk.rs  conflict.rs  mod.rs  submaps.rs
tests/: alternative_config_tests.rs  app_autocomplete_tests.rs  backup_tests.rs  bulk_tests.rs  cache_validation_tests.rs  cli_tests.rs  complex_parser_tests.rs  config_validation_tests.rs  conflict_logic_tests.rs  dvorak.xkb  export_tests.rs  favorites_tests.rs  glob_tests.rs  input_tests.rs  layout_tests.rs  parser_bindd_tests.rs  parser_corner_cases.rs  parser_input_tests.rs  parser_tests.rs  path_expansion_tests.rs  search_tests.rs  submap_tests.rs  submap_wizard_tests.rs  test_layout.xkb  utils_tests.rs  variable_tests.rs  xkb_logic_tests.rs
