[package]
name = "hyprKCS"
version = "1.18.5"
edition = "2021"
license = "MIT"

[dependencies]
gtk4 = { version = "0.10.3", features = ["v4_12"] }
libadwaita = "0.8.1"
anyhow = "1.0.100"
dirs = "6.0.0"
gtk4-layer-shell = "0.7.1"
fuzzy-matcher = "0.3.7"
similar = { version = "2.7.0", features = ["inline"] }

[[bin]]
name = "hyprKCS"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
