[package]
name = "hyprKCS"
version = "1.22.3"
edition = "2021"
license = "GPL-3.0"
description = "A fast, lightweight, and graphical keybind manager for Hyprland"
repository = "https://github.com/kosa12/hyprKCS"
homepage = "https://github.com/kosa12/hyprKCS"
readme = "README.md"
keywords = ["hyprland", "keybinds", "manager", "gui", "gtk4"]
categories = ["gui", "os::linux-apis", "accessibility", "config"]
exclude = [
    "assets/*",
    "mine/*",
    "tests/*",
    ".wiki_tmp/*",
    ".github/*",
]

[dependencies]
gtk4 = { version = "0.10.3", features = ["v4_12"] }
libadwaita = "0.8.1"
anyhow = { version = "1.0.100", default-features = false }
dirs = "6.0.0"
gtk4-layer-shell = "0.7.1"
fuzzy-matcher = "0.3.7"
libc = "0.2"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
similar = "2.7.0"
notify = { version = "8.2.0", default-features = false }

[[bin]]
name = "hyprkcs"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
